# rust_chat

./: .env  Cargo.toml  README.md  _typos.toml  deny.toml  docker-compose.yml  reset_db.sh  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
chat_test/tests/: chat.rs
frontend/chat_app/: package.json  vite.config.js
frontend/chat_app/src/: App.vue  main.js  utils.js
frontend/chat_app/src-tauri/: Cargo.toml  tauri.conf.json
frontend/chat_app/src/components/: CreateChatModal.vue  MessageList.vue  MessageSend.vue  Sidebar.vue
frontend/chat_app/src/store/: index.js
frontend/chat_app/src/views/: Chat.vue  Login.vue  Register.vue
migrations/: 20241204031634_initial.sql  20241210174036_workspace.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
