[workspace]
members = [ "chat_core","chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.8.2", features = [
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
anyhow = "1.0"
axum = { version = "0.7.9", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
    # "macros",
] }
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
