[package]
name = "chat_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror.workspace = true
sqlx = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde.workspace = true
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

jwt-simple = { workspace = true }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
axum-extra = { workspace = true }
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
