[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { workspace = true }
thiserror.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
axum = { workspace = true }
tokio = { workspace = true }
serde.workspace = true
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
serde_json = "1.0.133"
sqlx-db-tester = "0.5.0"
http-body-util = "0.1.1"
