[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]


[dependencies]

anyhow = { workspace = true }
thiserror.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
axum = { workspace = true }
tokio = { workspace = true }
serde.workspace = true
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
serde_json = "1.0.133"
sqlx-db-tester = { version = "0.5.0", optional = true }
http-body-util = { version = "0.1.1", optional = true }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
axum-extra = { workspace = true }
utoipa = "5.2.0"
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"
chat_core = { path = "../chat_core" }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
[dev-dependencies]
chat_server = { workspace = true, features = ["test-util"] }
