[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat_core = { workspace = true }
chat_server = { workspace = true, features = ["test-util"] }
notify_server = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
    "stream",
] }
reqwest-eventsource = "0.6.0"
serde_json = "1.0.116"

[dependencies]
futures = "0.3.30"
