[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { workspace = true }
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["sync"] }
chat_core = { workspace = true }
jwt-simple = { workspace = true }
dashmap = { version = "6.1.0", features = ["serde"] }
tower-http = { workspace = true }
pin-project = "1.1.7"
